# crudify_orm

./: .env  .gitignore  Cargo.toml  README.md  shell.nix
crudify/: Cargo.toml  README.md
crudify/src/: constant.rs  lib.rs  methods_generators.rs
crudify_orm/: Cargo.toml  README.md
crudify_orm/src/: constant.rs  dto_generators.rs  input.rs  lib.rs  methods_generators.rs
crudify_orm_tests/: Cargo.toml
crudify_orm_tests/migrations/: 20251002145951_user_v1.sql  20251004043031_user_v2_correct.sql
crudify_orm_tests/src/entities/: mod.rs  user_v1.rs  user_v2.rs
crudify_orm_tests/tests/: user_v1_tests.rs  user_v2_tests.rs
crudx_dbo_generator/: Cargo.toml
crudx_dbo_generator/src/: input.rs  utils.rs
examples/crud-operations/: Cargo.toml  expanded.rs
examples/crud-operations/migrations/: 20241017212853_user.sql  20241022003326_partners.sql
examples/crud-operations/src/: main.rs
src/: lib.rs
