[package]
name = "crudify_orm"                        # Updated crate name
version = "0.1.7"
edition = "2021"
authors = ["Uttom Akash <uttom.akash71@gmail.com>"]
description = "CrudifyORM: A Rust library that automatically generates CRUD operations, DTOs, and pagination helpers for database models."
license = "MIT OR Apache-2.0"
repository = "https://github.com/uttom-akash/crudify_orm"
readme = "../README.md"
keywords = ["crud", "sqlx", "orm", "pagination", "dto"]
categories = ["development-tools", "database"]
homepage = "https://github.com/uttom-akash/crudify_orm"
documentation = "https://docs.rs/crudify_orm"


[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full","extra-traits"] }
quote = "1"
proc-macro2 = "1"


