[package]
name = "crudify_orm_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
crudify_orm = "=0.1.4"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }  # Path to the macro crate
uuid = { version = "1", features = ["v4"] }
chrono =  "0.4.38"
rand = "0.8"